--- a/bike-stats.ipynb
+++ b/bike-stats.ipynb
@@ -1,18 +1,9 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.6 64-bit ('.venv': poetry)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -25,6 +16,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.6"
+  },
+  "interpreter": {
+   "hash": "09c56a765f8270e83b42a5a3d17b596425183071bd039f54ebd40ac5272ff6b8"
   }
  },
  "nbformat": 4,
